fixed menu tab spacing

--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -663,8 +663,7 @@ $main-font: 'Avenir Next', 'Lato', sans-serif;
       }
       ul{
         list-style: none;
-        position: relative;
-        left: -15px;
+
         li{
           display: block;
           padding: 11px;
